completed the hex and hsl displays

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <br>
             <button class="r1">Random</button>
             <br>
-            <button class="complimantary">Complimentary Colors</button>
+            <button class="complemantary">Complementary Colors</button>
         </div>
 
         <div class="input-container2">
@@ -23,7 +23,7 @@
             <br>
             <button class="r2">Random</button>
             <br>
-            <button class="contrast">Contrasted Colors</button>
+            <button class="contrasted">Contrasted Colors</button>
         </div>
     </div>
 
