added html button

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
 
     <div class="rgb">
         <h3></h3>
-        <!-- <button class="copy">Copy</button> -->
+        <button class="copy">Copy</button>
     </div>
 
     <div class="hex">
         <h4></h4>
-        <!-- <button class="copy">Copy</button> -->
+        <button class="copy">Copy</button>
     </div>
 
     <div class="hsl">
         <h5></h5>
-        <!-- <button class="copy">Copy</button> -->
+        <button class="copy">Copy</button>
     </div>
 
 
