changed default background color. Removed copy buttons

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="container">
         <div class="input-container1">
-            <input class="color1" type="color" name="color1" value="#ff0000">
+            <input class="color1" type="color" name="color1" value="#00ccff">
             <br>
             <button class="r1">Random</button>
             <br>
@@ -19,7 +19,7 @@
         </div>
 
         <div class="input-container2">
-            <input class="color2" type="color" name="color2" value="#ffff00">
+            <input class="color2" type="color" name="color2" value="#ffffff">
             <br>
             <button class="r2">Random</button>
             <br>
@@ -31,17 +31,17 @@
 
     <div class="rgb">
         <h3></h3>
-        <button class="copy">Copy</button>
+        <!-- <button class="copy">Copy RGB</button> -->
     </div>
 
     <div class="hex">
         <h4></h4>
-        <button class="copy">Copy</button>
+        <!-- <button class="copy">Copy HEX</button> -->
     </div>
 
     <div class="hsl">
         <h5></h5>
-        <button class="copy">Copy</button>
+        <!-- <button class="copy">Copy HSL</button> -->
     </div>
 
 
