--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
 
 
 
-    <script type="text/javascript" src="script.js"></script>
+    <script type="text/javascript" src="bundle.js"></script>
 </body>
 </html>
