--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="container">
         <div class="input-container1">
-            <input class="color1" type="color" name="color1" value="#00ccff">
+            <input class="color1" type="color" name="color1" value="#b8f1ff">
             <br>
             <button class="r1">Random</button>
             <br>
