added a third color option to the gradient. Will make this selectable in future.

--- a/index.html
+++ b/index.html
@@ -11,19 +11,27 @@
 
     <div class="container">
         <div class="input-container1">
-            <input class="color1" type="color" name="color1" value="#b8f1ff">
+            <input class="color1" type="color" name="color1" value="#284a53">
             <br>
             <button class="r1">Random</button>
             <br>
-            <button class="complemantary">Complementary Colors</button>
+            <!-- <button class="complemantary">Complementary Colors</button> -->
         </div>
 
         <div class="input-container2">
-            <input class="color2" type="color" name="color2" value="#ffffff">
+            <input class="color2" type="color" name="color2" value="#b8f1ff">
             <br>
             <button class="r2">Random</button>
             <br>
-            <button class="contrasted">Contrasted Colors</button>
+            <!-- <button class="contrasted">Contrasted Colors</button> -->
+        </div>
+
+        <div class="input-container3">
+            <input class="color3" type="color" name="color3" value="#ffffff">
+            <br>
+            <button class="r3">Random</button>
+            <br>
+            <!-- <button class="contrasted">Contrasted Colors</button> -->
         </div>
     </div>
 
