changed backgroudn color default

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="container">
         <div class="input-container1">
-            <input class="color1" type="color" name="color1" value="#000">
+            <input class="color1" type="color" name="color1" value="#0000c8">
             <br>
             <button class="r1">Random</button>
             <br>
@@ -19,7 +19,7 @@
         </div>
 
         <div class="input-container2">
-            <input class="color2" type="color" name="color2" value="#ffdd00">
+            <input class="color2" type="color" name="color2" value="#99fffd">
             <br>
             <button class="r2">Random</button>
             <br>
@@ -27,7 +27,7 @@
         </div>
 
         <div class="input-container3">
-            <input class="color3" type="color" name="color3" value="#000">
+            <input class="color3" type="color" name="color3" value="#0000c8">
             <br>
             <button class="r3">Random</button>
             <br>
