working on adding copy function

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="container">
         <div class="input-container1">
-            <input class="color1" type="color" name="color1" value="#0000c8">
+            <input class="color1" type="color" name="color1" value="#f0fffe">
             <br>
             <button class="r1">Random</button>
             <br>
@@ -27,7 +27,7 @@
         </div>
 
         <div class="input-container3">
-            <input class="color3" type="color" name="color3" value="#0000c8">
+            <input class="color3" type="color" name="color3" value="#000147">
             <br>
             <button class="r3">Random</button>
             <br>
@@ -37,7 +37,7 @@
 
     <h2>Current CSS Background</h2>
 
-    <div class="rgb">
+    <div class="rgb" title="I Show up on Hover">
         <h3></h3>
         <!-- <button class="copy">Copy RGB</button> -->
     </div>
