fixed diviation of branches.

--- a/index.html
+++ b/index.html
@@ -37,22 +37,23 @@
 
     <h2>Current CSS Background</h2>
 
-    <div class="rgb" title="I Show up on Hover">
+    <div class="rgb">
         <h3></h3>
-        <!-- <button class="copy">Copy RGB</button> -->
     </div>
 
     <div class="hex">
         <h4></h4>
-        <!-- <button class="copy">Copy HEX</button> -->
     </div>
 
     <div class="hsl">
         <h5></h5>
-        <!-- <button class="copy">Copy HSL</button> -->
     </div>
 
-
+    <div class="Copy-container">
+        <button class="copy">Copy RGB</button>
+        <button class="copy">Copy HEX</button>
+        <button class="copy">Copy HSL</button>
+    </div>
 
     <script type="text/javascript" src="bundle.js"></script>
 </body>
