removed copy buttons

--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         <h5></h5>
     </div>
 
-    <div class="Copy-container">
+    <!-- <div class="Copy-container">
         <button class="copy">Copy RGB</button>
         <button class="copy">Copy HEX</button>
         <button class="copy">Copy HSL</button>
-    </div>
+    </div> -->
 
     <script type="text/javascript" src="bundle.js"></script>
 </body>
